Atualização final projeto individual

--- a/public/index.html
+++ b/public/index.html
@@ -81,17 +81,19 @@
                 <div class="sobremim-grid">
 
                     <div class="card">
-                        <figure class="card-round"></figure>
+                        <figure class="card-round">
+                          <div class="img-round" style="background-image: url(img/equipe.png);"></div>
+                        </figure>
                         <p class="p-card">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, perferendis voluptatem commodi ipsa voluptas sed dolorum cum, quis minima officiis laudantium excepturi dolor suscipit amet dolores vel? Placeat, aperiam eius?
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, commodi consequatur animi minus voluptates voluptatem nihil. Labore omnis, unde quo odio veritatis, enim, quisquam hic maxime ex exercitationem id excepturi?
+                          Grande parte da minha infância se tratou disso, eu era uma criança acima do peso para minha idade, me sentia excluído grande parte das vezes quando estava com outras crianças, os jogos me acolheram, eu pude conhecer pessoas novas, vivenciar mundos imagináveis, me divertir e aprender com o ambiente virtual. Tenho uma ligação emocional muito forte com jogos, pois acredito que não se trata apenas de um modo de diversão, e sim, uma experiencia, uma emoção ou até uma aventura.
                         </p>
                     </div>
                     <div class="card">
-                        <figure class="card-round"></figure>
+                        <figure class="card-round">
+                          <div class="img-round" style="background-image: url(img/controle.png);"></div>
+                        </figure>
                         <p class="p-card">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt amet magni obcaecati tempore assumenda fuga voluptate molestiae doloremque dolorum nostrum explicabo, laborum et recusandae, ipsa dicta nemo consequuntur. Consectetur, illum.
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt ipsam cupiditate facilis voluptatum! Saepe aperiam, vitae repudiandae itaque laborum earum quos quia, numquam consectetur ab enim cum odit, consequatur iste.
+                          Estou ligado com esse tema desde quando tinha apenas 8 anos de idade. Tenho muitas lembranças de jogos e como me ajudaram muito em momentos difíceis, hoje, eu me vejo inspirado por essa ajuda. Eu tenho muita vontade de cativar pessoas com minhas criações da mesma forma que eu fui. Gosto de pensar que não perdi muito tempo da minha vida em jogos, e sim, aproveitei e pude ter uma conexão com esse mundo, que me fez sem quem eu sou hoje.
                         </p>
                     </div>
                     
@@ -180,9 +182,8 @@
           </h1>
 
           <div class="contato">
-            <div class="contato-img" style="background-image: url(img/linked.png);"></div>
-            <div class="contato-img" style="background-image: url(img/what.png);"></div>
-            <div class="contato-img" style="background-image: url(img/github.png);"></div>
+            <a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin" target="_blank"><div class="contato-img" style="background-image: url(img/linked.png);"></div></a>
+            <a href="https://github.com/joaoGlima09" target="_blank"><div class="contato-img" style="background-image: url(img/github.png);"></div></a>
           </div>
 
           <h1>2024</h1>
