--- a/public/indexPokemon.html
+++ b/public/indexPokemon.html
@@ -60,7 +60,7 @@
             >
               <div class="content">
                 <div class="title">Jogos Emulador</div>
-                <div class="desc">Lorem ipsum dolor sit amet</div>
+                <div class="desc">Jogue em qualquer lugar</div>
               </div>
             </div>
 
@@ -70,7 +70,7 @@
           >
             <div class="content">
               <div class="title">O Mundo Pokémon</div>
-              <div class="desc">Lorem ipsum dolor sit amet</div>
+              <div class="desc">Animais fantásticos</div>
             </div>
           </div>
 
@@ -80,7 +80,7 @@
             >
               <div class="content">
                 <div class="title">Mudkip</div>
-                <div class="desc">Lorem ipsum dolor sit amet</div>
+                <div class="desc">Meu pokémon favorito</div>
               </div>
             </div>
 
@@ -90,7 +90,7 @@
             >
               <div class="content">
                 <div class="title">O Anime</div>
-                <div class="desc">Lorem ipsum dolor sit amet</div>
+                <div class="desc">Momentos em família</div>
               </div>
             </div>
 
@@ -100,7 +100,7 @@
             >
               <div class="content">
                 <div class="title">Legends Arceus</div>
-                <div class="desc">Lorem ipsum dolor sit amet</div>
+                <div class="desc">O meu jogo favorito</div>
               </div>
             </div>
 
@@ -125,9 +125,11 @@
           </div>
 
           <div class="box-info">
-            <div class="tema" style="background-image: url(img/saude.png);"></div>
+            <div class="tema" style="background-image: url(img/educa.png);"></div>
 
-            <div class="info-text"></div>
+            <div class="info-text">
+              <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At quas, laudantium accusamus aspernatur mollitia vero dolores ut, ad reiciendis natus tenetur ex, vel rerum aut nulla commodi expedita pariatur fugit.</h1>
+            </div>
           </div>
         </div>
       </div>
@@ -143,9 +145,8 @@
           </h1>
 
           <div class="contato">
-            <div class="contato-img" style="background-image: url(img/linked.png);"></div>
-            <div class="contato-img" style="background-image: url(img/what.png);"></div>
-            <div class="contato-img" style="background-image: url(img/github.png);"></div>
+            <a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin" target="_blank"><div class="contato-img" style="background-image: url(img/linked.png);"></div></a>
+            <a href="https://github.com/joaoGlima09" target="_blank"><div class="contato-img" style="background-image: url(img/github.png);"></div></a>
           </div>
 
           <h1>2024</h1>
