--- a/public/indexVava.html
+++ b/public/indexVava.html
@@ -60,7 +60,7 @@
             >
               <div class="content">
                 <div class="title">Neon</div>
-                <div class="desc">Lorem ipsum dolor sit amet</div>
+                <div class="desc">Minha personagem favorita</div>
               </div>
             </div>
 
@@ -70,7 +70,7 @@
             >
               <div class="content">
                 <div class="title">História</div>
-                <div class="desc">Lorem ipsum dolor sit amet</div>
+                <div class="desc">Profundidade dos personagens</div>
               </div>
             </div>
 
@@ -80,7 +80,7 @@
           >
             <div class="content">
               <div class="title">Ranqueada</div>
-              <div class="desc">Lorem ipsum dolor sit amet</div>
+              <div class="desc">Dedicação total</div>
             </div>
           </div>
 
@@ -90,7 +90,7 @@
             >
               <div class="content">
                 <div class="title">Loud</div>
-                <div class="desc">Lorem ipsum dolor sit amet</div>
+                <div class="desc">Primeira equipe que acompanhei</div>
               </div>
             </div>
 
@@ -100,7 +100,7 @@
             >
               <div class="content">
                 <div class="title">Momentos</div>
-                <div class="desc">Lorem ipsum dolor sit amet</div>
+                <div class="desc">Diversão total</div>
               </div>
             </div>
 
@@ -119,7 +119,7 @@
       <div class="container">
         <div class="grid-infos">
           <div class="box-img">
-            <div class="logon" style="background-image: url(img/vava-logon.webp);">
+            <div class="logon" style="background-image: url(img/vava-logon.jpg);">
               <div class="logon-text"></div>
             </div>
           </div>
@@ -127,7 +127,11 @@
           <div class="box-info">
             <div class="tema" style="background-image: url(img/saude.png);"></div>
 
-            <div class="info-text"></div>
+            <div class="info-text">
+              <h1>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, aliquam? Assumenda voluptas dolore nostrum doloribus inventore tempora eos similique esse vel! Facere voluptate labore exercitationem dolore pariatur nemo harum laudantium.
+              </h1>
+            </div>
           </div>
         </div>
       </div>
@@ -143,9 +147,8 @@
           </h1>
 
           <div class="contato">
-            <div class="contato-img" style="background-image: url(img/linked.png);"></div>
-            <div class="contato-img" style="background-image: url(img/what.png);"></div>
-            <div class="contato-img" style="background-image: url(img/github.png);"></div>
+            <a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin" target="_blank"><div class="contato-img" style="background-image: url(img/linked.png);"></div></a>
+            <a href="https://github.com/joaoGlima09" target="_blank"><div class="contato-img" style="background-image: url(img/github.png);"></div></a>
           </div>
 
           <h1>2024</h1>
