--- a/public/indexRocket.html
+++ b/public/indexRocket.html
@@ -60,7 +60,7 @@
             >
               <div class="content">
                 <div class="title">Jogabilidade</div>
-                <div class="desc">Lorem ipsum dolor sit amet</div>
+                <div class="desc">Posso voar com um carro</div>
               </div>
             </div>
 
@@ -70,7 +70,7 @@
           >
             <div class="content">
               <div class="title">Domínio</div>
-              <div class="desc">Lorem ipsum dolor sit amet</div>
+              <div class="desc">Concentração total</div>
             </div>
           </div>
 
@@ -80,7 +80,7 @@
             >
               <div class="content">
                 <div class="title">1 contra 1</div>
-                <div class="desc">Lorem ipsum dolor sit amet</div>
+                <div class="desc">Meu modo de jogo favorito</div>
               </div>
             </div>
 
@@ -90,7 +90,7 @@
             >
               <div class="content">
                 <div class="title">Habilidades</div>
-                <div class="desc">Lorem ipsum dolor sit amet</div>
+                <div class="desc">Sensação de aprendizagem</div>
               </div>
             </div>
 
@@ -100,7 +100,7 @@
             >
               <div class="content">
                 <div class="title">Recompensas</div>
-                <div class="desc">Lorem ipsum dolor sit amet</div>
+                <div class="desc">Incentivo a comunidade</div>
               </div>
             </div>
 
@@ -127,7 +127,9 @@
           <div class="box-info">
             <div class="tema" style="background-image: url(img/saude.png);"></div>
 
-            <div class="info-text"></div>
+            <div class="info-text">
+              <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At quas, laudantium accusamus aspernatur mollitia vero dolores ut, ad reiciendis natus tenetur ex, vel rerum aut nulla commodi expedita pariatur fugit.</h1>
+            </div>
           </div>
         </div>
       </div>
@@ -143,9 +145,8 @@
           </h1>
 
           <div class="contato">
-            <div class="contato-img" style="background-image: url(img/linked.png);"></div>
-            <div class="contato-img" style="background-image: url(img/what.png);"></div>
-            <div class="contato-img" style="background-image: url(img/github.png);"></div>
+            <a href="https://www.linkedin.com/feed/?trk=guest_homepage-basic_nav-header-signin" target="_blank"><div class="contato-img" style="background-image: url(img/linked.png);"></div></a>
+            <a href="https://github.com/joaoGlima09" target="_blank"><div class="contato-img" style="background-image: url(img/github.png);"></div></a>
           </div>
 
           <h1>2024</h1>
