Tudo certo para apresentar

--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
         <div class="emocao-itens">
 
           <div class="emocao-title">
-            <h1>Importância dos Jogos</h1>
+            <h1>Jogos fazem bem?</h1>
           </div>
 
           <div class="iframe-youtube">
@@ -133,7 +133,7 @@
         <div class="conheca-mais-itens">
 
           <div class="conheca-mais-title">
-            <h1>Conheça mais</h1>
+            <h1>Meus jogos favoritos</h1>
           </div>
 
           <div class="grids">
