--- a/public/indexBrawl.html
+++ b/public/indexBrawl.html
@@ -128,7 +128,7 @@
             <div class="tema" style="background-image: url(img/saude.png);"></div>
 
             <div class="info-text">
-              <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At quas, laudantium accusamus aspernatur mollitia vero dolores ut, ad reiciendis natus tenetur ex, vel rerum aut nulla commodi expedita pariatur fugit.</h1>
+              <h1>Brawlhalla foi muito importante na minha infância, eu conheci muitos amigos e me divertia muito com esse jogo, ficava horas e horas treinando para ficar bom nos combos e habilidades de cada personagem. Sinto que me fez muito bem esses momentos com meus amigos.</h1>
             </div>
           </div>
         </div>
