--- a/public/indexMinecraft.html
+++ b/public/indexMinecraft.html
@@ -128,7 +128,7 @@
             <div class="tema" style="background-image: url(img/educa.png);"></div>
 
             <div class="info-text">
-              <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At quas, laudantium accusamus aspernatur mollitia vero dolores ut, ad reiciendis natus tenetur ex, vel rerum aut nulla commodi expedita pariatur fugit.</h1>
+              <h1>Comecei a jogar Minecraft em uma época que eu estava com problema na matéria de inglês,e isso me ajudou muito, já que tinha dificuldade muito grande com as diferentes palavras, e Minecraft é rico em diversidade de itens, então explorei bastante todas as palavras diferentes.</h1>
             </div>
           </div>
         </div>
