--- a/public/indexPokemon.html
+++ b/public/indexPokemon.html
@@ -128,7 +128,9 @@
             <div class="tema" style="background-image: url(img/educa.png);"></div>
 
             <div class="info-text">
-              <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At quas, laudantium accusamus aspernatur mollitia vero dolores ut, ad reiciendis natus tenetur ex, vel rerum aut nulla commodi expedita pariatur fugit.</h1>
+              <h1>
+                Pokémon me ajudou muito nos meus estudos quando criança, pois era necessário saber pesquisar palavras em inglês, ou até de como passava de uma fase de um jogo. Graças à pokémon, consegui desenvolver essas habilidades bem cedo, oque me ajudou na escola.
+              </h1>
             </div>
           </div>
         </div>
