--- a/public/indexRocket.html
+++ b/public/indexRocket.html
@@ -128,7 +128,7 @@
             <div class="tema" style="background-image: url(img/saude.png);"></div>
 
             <div class="info-text">
-              <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At quas, laudantium accusamus aspernatur mollitia vero dolores ut, ad reiciendis natus tenetur ex, vel rerum aut nulla commodi expedita pariatur fugit.</h1>
+              <h1>Rocket league era um jogo, que exigia muito foco e um mental forte, já um mínimo detalhe poderia mudar completamente o placar da partida. Foi com esse jogo que aprendi a ser menos ansioso e reverter situações mesmo que estivesse sobre pressão.</h1>
             </div>
           </div>
         </div>
