--- a/public/indexVava.html
+++ b/public/indexVava.html
@@ -129,7 +129,7 @@
 
             <div class="info-text">
               <h1>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, aliquam? Assumenda voluptas dolore nostrum doloribus inventore tempora eos similique esse vel! Facere voluptate labore exercitationem dolore pariatur nemo harum laudantium.
+                Comecei a jogar Valorant e por isso conheci uma pessoa que é muito importante na minha vida, que me ajuda todo o momento, por isso eu acredito que jogos são muito mais que apenas diversão, e sim, pode mudar vidas. Me divirto muito com minha namorada quando jogamos juntos.
               </h1>
             </div>
           </div>
